--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
+/mock-api-server/data.json
 
 npm-debug.log*
 yarn-debug.log*
